--- a/week5/tutorial1.ipynb
+++ b/week5/tutorial1.ipynb
@@ -151,6 +151,9 @@
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore') \n",
+    "\n",
     "import osmnx as ox\n",
     "import numpy as np\n",
     "import networkx as nx\n",
@@ -318,7 +321,7 @@
    "outputs": [],
    "source": [
     "tags = {'landuse': True, 'natural': True}   \n",
-    "landuse = ox.geometries_from_place(place_name, tags)"
+    "landuse = ox.features_from_place(place_name, tags)"
    ]
   },
   {
@@ -1907,7 +1910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
