--- a/week5/tutorial2.ipynb
+++ b/week5/tutorial2.ipynb
@@ -117,10 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install geopandas\n",
-    "!pip install pygeos\n",
     "!pip install osmnx\n",
-    "!pip install xarray\n",
     "!pip install rasterio\n",
     "!pip install rioxarray\n",
     "!pip install cdsapi"
@@ -152,7 +149,7 @@
     "import os\n",
     "import rasterio\n",
     "import cdsapi\n",
-    "import pygeos \n",
+    "import shapely \n",
     "import rioxarray\n",
     "import matplotlib\n",
     "import urllib3\n",
@@ -980,8 +977,8 @@
    },
    "outputs": [],
    "source": [
-    "wind_curves = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week4/damage_curves.xlsx\",sheet_name='wind_curves')\n",
-    "maxdam = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week4/damage_curves.xlsx\",sheet_name='maxdam')"
+    "wind_curves = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week5/damage_curves.xlsx\",sheet_name='wind_curves')\n",
+    "maxdam = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week5/damage_curves.xlsx\",sheet_name='maxdam')"
    ]
   },
   {
@@ -1074,7 +1071,7 @@
     "    max_lat = landuse.y.max().to_dict()['data']\n",
     "\n",
     "    # Create a bounding box using the minimum and maximum latitude and longitude values\n",
-    "    area = gpd.GeoDataFrame([pygeos.box(min_lon,min_lat,max_lon, max_lat)],columns=['geometry'])\n",
+    "    area = gpd.GeoDataFrame([shapely.box(min_lon,min_lat,max_lon, max_lat)],columns=['geometry'])\n",
     "\n",
     "    # Set the crs of the bounding box to EPSG:3857\n",
     "    area.crs = 'epsg:3857'\n",
@@ -1318,8 +1315,8 @@
    },
    "outputs": [],
    "source": [
-    "flood_curves = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week4/damage_curves.xlsx\",sheet_name='flood_curves',engine='openpyxl')\n",
-    "maxdam = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week4/damage_curves.xlsx\",sheet_name='maxdam')"
+    "flood_curves = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week5/damage_curves.xlsx\",sheet_name='flood_curves',engine='openpyxl')\n",
+    "maxdam = pd.read_excel(\"https://github.com/ElcoK/BigData_AED/raw/main/week5/damage_curves.xlsx\",sheet_name='maxdam')"
    ]
   },
   {
@@ -1589,14 +1586,14 @@
     "flood_map_vector = flood_map_area['band_data'].to_dataframe().reset_index()\n",
     "\n",
     "# create geometry values and drop lat lon columns\n",
-    "flood_map_vector['geometry'] = [pygeos.points(x) for x in list(zip(flood_map_vector['x'],flood_map_vector['y']))]\n",
+    "flood_map_vector['geometry'] = [shapely.points(x) for x in list(zip(flood_map_vector['x'],flood_map_vector['y']))]\n",
     "flood_map_vector = flood_map_vector.drop(['x','y','band','spatial_ref'],axis=1)\n",
     "\n",
     "# drop all non values to reduce size\n",
     "flood_map_vector = flood_map_vector.loc[~flood_map_vector['band_data'].isna()].reset_index(drop=True)\n",
     "\n",
     "# and turn them into squares again:\n",
-    "flood_map_vector.geometry= pygeos.buffer(flood_map_vector.geometry,radius=100/2,cap_style='square').values"
+    "flood_map_vector.geometry= shapely.buffer(flood_map_vector.geometry,radius=100/2,cap_style='square').values"
    ]
   },
   {
@@ -1643,29 +1640,29 @@
    "source": [
     "def reproject(df_ds,current_crs=\"epsg:4326\",approximate_crs = \"epsg:3035\"):\n",
     "    geometries = df_ds['geometry']\n",
-    "    coords = pygeos.get_coordinates(geometries)\n",
+    "    coords = shapely.get_coordinates(geometries)\n",
     "    transformer=pyproj.Transformer.from_crs(current_crs, approximate_crs,always_xy=True)\n",
     "    new_coords = transformer.transform(coords[:, 0], coords[:, 1])\n",
     "    \n",
-    "    return pygeos.set_coordinates(geometries.copy(), np.array(new_coords).T) \n",
+    "    return shapely.set_coordinates(geometries.copy(), np.array(new_coords).T) \n",
     "\n",
     "def buffer_assets(assets,buffer_size=100):\n",
-    "    assets['buffered'] = pygeos.buffer(assets.geometry.values,buffer_size)\n",
+    "    assets['buffered'] = shapely.buffer(assets.geometry.values,buffer_size)\n",
     "    return assets\n",
     "\n",
     "def overlay_hazard_assets(df_ds,assets):\n",
     "\n",
     "    #overlay \n",
-    "    hazard_tree = pygeos.STRtree(df_ds.geometry.values)\n",
-    "    if (pygeos.get_type_id(assets.iloc[0].geometry) == 3) | (pygeos.get_type_id(assets.iloc[0].geometry) == 6):\n",
-    "        return  hazard_tree.query_bulk(assets.geometry,predicate='intersects')    \n",
+    "    hazard_tree = shapely.STRtree(df_ds.geometry.values)\n",
+    "    if (shapely.get_type_id(assets.iloc[0].geometry) == 3) | (shapely.get_type_id(assets.iloc[0].geometry) == 6):\n",
+    "        return  hazard_tree.query(assets.geometry,predicate='intersects')    \n",
     "    else:\n",
-    "        return  hazard_tree.query_bulk(assets.buffered,predicate='intersects')\n",
+    "        return  hazard_tree.query(assets.buffered,predicate='intersects')\n",
     "    \n",
     "def get_damage_per_asset(asset,df_ds,assets):\n",
     "    # find the exact hazard overlays:\n",
     "    get_hazard_points = df_ds.iloc[asset[1]['hazard_point'].values].reset_index()\n",
-    "    get_hazard_points = get_hazard_points.loc[pygeos.intersects(get_hazard_points.geometry.values,assets.iloc[asset[0]].geometry)]\n",
+    "    get_hazard_points = get_hazard_points.loc[shapely.intersects(get_hazard_points.geometry.values,assets.iloc[asset[0]].geometry)]\n",
     "\n",
     "    asset_geom = assets.iloc[asset[0]].geometry\n",
     "\n",
@@ -1676,7 +1673,7 @@
     "    if len(get_hazard_points) == 0:\n",
     "        return asset[0],0\n",
     "    else:\n",
-    "        get_hazard_points['overlay_meters'] = pygeos.length(pygeos.intersection(get_hazard_points.geometry.values,asset_geom))\n",
+    "        get_hazard_points['overlay_meters'] = shapely.length(shapely.intersection(get_hazard_points.geometry.values,asset_geom))\n",
     "        return asset[0],np.sum((np.interp(get_hazard_points.band_data.values,hazard_intensity,fragility_values))*get_hazard_points.overlay_meters*maxdam_asset)"
    ]
   },
@@ -1686,7 +1683,7 @@
     "id": "og2Bkcv--g4M"
    },
    "source": [
-    "Now we need to make sure that the road data is the same coordinate system. To do so, we will use the **pygeos** package. This is a much faster package compared to **GeoPandas**. "
+    "Now we need to make sure that the road data is the same coordinate system. "
    ]
   },
   {
@@ -1701,9 +1698,7 @@
    },
    "outputs": [],
    "source": [
-    "roads_pg = pd.DataFrame(roads.copy())\n",
-    "roads_pg.geometry = pygeos.from_shapely(roads_pg.geometry)\n",
-    "roads_pg.geometry = reproject(roads_pg)"
+    "roads.geometry = reproject(roads)"
    ]
   },
   {
@@ -1723,7 +1718,7 @@
    },
    "outputs": [],
    "source": [
-    "overlay_roads = pd.DataFrame(overlay_hazard_assets(flood_map_vector,buffer_assets(roads_pg)).T,columns=['asset','hazard_point'])"
+    "overlay_roads = pd.DataFrame(overlay_hazard_assets(flood_map_vector,buffer_assets(roads)).T,columns=['asset','hazard_point'])"
    ]
   },
   {
@@ -1750,7 +1745,7 @@
     "collect_output = []\n",
     "for asset in tqdm(overlay_roads.groupby('asset'),total=len(overlay_roads.asset.unique()),\n",
     "                              desc='polyline damage calculation for'):\n",
-    "    collect_output.append(get_damage_per_asset(asset,flood_map_vector,roads_pg))\n",
+    "    collect_output.append(get_damage_per_asset(asset,flood_map_vector,roads))\n",
     "    \n",
     "damaged_roads = roads.merge(pd.DataFrame(collect_output,columns=['index','damage']),\n",
     "                                                          left_index=True,right_on='index')[['highway','geometry','damage']]"
