--- a/_sources/week4/tutorial1.ipynb
+++ b/_sources/week4/tutorial1.ipynb
@@ -533,7 +533,7 @@
     "\n",
     "- Through the `region`argument we specify the geographic boundary of our training dataset.\n",
     "- Through the `scale` argument we specify the size of the points for our sample (30 would indicate 30m).\n",
-    "- Through the `numPixels` argument we specify how many pixels we want to extract.\n",
+    "- Through the `numPixels` argument we specify how many pixels we want to extract. I suggest to not go above 5000.\n",
     "- Through the `seed` argument we specify which random selection order we want. Through using a seed, you can always reproduce your results.\n",
     "- Through the `geometries` argument we specify whether we want to extract the geometries as well. This should always be set to True.\n",
     "\n"
