--- a/week6/tutorial2.ipynb
+++ b/week6/tutorial2.ipynb
@@ -88,11 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install flickrapi\n",
-    "#!pip install osmnx\n",
-    "#!pip install geopandas\n",
-    "#!pip install pygeos\n",
-    "#!pip install contextily"
+    "!pip install flickrapi\n",
+    "!pip install osmnx\n",
+    "!pip install contextily"
    ]
   },
   {
@@ -109,7 +107,6 @@
    "outputs": [],
    "source": [
     "import flickrapi\n",
-    "import json\n",
     "import pygeos\n",
     "import pandas as pd\n",
     "import contextily as cx\n",
