--- a/_sources/week4/tutorial1.ipynb
+++ b/_sources/week4/tutorial1.ipynb
@@ -117,8 +117,6 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install ee # ee is already available in google colab so no need to install it again\n",
-    "!pip install geemap\n",
     "!pip install rioxarray"
    ]
   },
@@ -126,8 +124,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you may or may not have seen while installing, there was a warning that we need to restart our runtime. To do so, click on **Runtime** in the topbar menu and click on **Runtime opnieuw starten**/**Restart runtime**.\n",
-    "\n",
     "Now we will import these packages in the cell below:"
    ]
   },
@@ -151,15 +147,8 @@
    "source": [
     "import ee\n",
     "import geemap\n",
-    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import xarray as xr\n",
-    "import rioxarray as rio\n",
-    "\n",
-    "from matplotlib.colors import LinearSegmentedColormap,ListedColormap\n",
-    "from matplotlib.patches import Patch\n",
-    "from matplotlib import rcParams, cycler"
+    "import xarray as xr"
    ]
   },
   {
