--- a/_sources/week4/tutorial1.ipynb
+++ b/_sources/week4/tutorial1.ipynb
@@ -1054,21 +1054,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kKx7J2uglJj9"
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 4:</b>  Upload the figure of your Random Forest Classifier progress.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 5:</b>  Please describe the figure above. What do you think would be a good value to use, and why?\n",
+    "<b>Question 4:</b>  Please describe the figure of your Random Forest Classifier progress. What do you think would be a good value to use, and why?\n",
     "</div>"
    ]
   },
@@ -1150,7 +1139,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 6:</b> Which values did you obtain for Kappa and your validation sample. Please interpret them.\n",
+    "<b>Question 5:</b> Which values did you obtain for Kappa and your validation sample. Please interpret them.\n",
     "</div>"
    ]
   },
@@ -1371,7 +1360,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 7:</b> Describe the results of the CART classifier and the Naive Bayes. How did they perform and why do you think the results are different between them?\n",
+    "<b>Question 6:</b> Describe the results of the CART classifier and the Naive Bayes. How did they perform and why do you think the results are different between them?\n",
     "</div>"
    ]
   },
@@ -1541,7 +1530,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 8:</b> Describe the results of the Support Vector Machine. Are you surprised by the outcome?\n",
+    "<b>Question 7:</b> Describe the results of the Support Vector Machine. Are you surprised by the outcome?\n",
     "</div>"
    ]
   },
@@ -2102,7 +2091,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 9:</b> Interpret the results of the classification with ESA WorldCover. How has this model performed compared to using Corine Land Cover?</div>"
+    "<b>Question 8:</b> Interpret the results of the classification with ESA WorldCover. How has this model performed compared to using Corine Land Cover?</div>"
    ]
   },
   {
@@ -2307,21 +2296,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NFK-oJqjmx7e"
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 10:</b> Please upload the comparison figure of the original Corine Land Cover data and the classified map. \n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 11:</b> Describe the results of the Corine Land Cover classification. How do you think the model has performed when you zoom in on a specific area. Do you notice specific land-use classes to be worse than expected? Or better than expected? Please elaborate. \n",
+    "<b>Question 9:</b> Describe the results of the Corine Land Cover classification. How do you think the model has performed when you zoom in on a specific area. Do you notice specific land-use classes to be worse than expected? Or better than expected? Please elaborate. \n",
     "</div>"
    ]
   },
@@ -2330,7 +2308,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 12:</b> Obtain the Corine Land Cover results once more by using a different classification model. How do the results change. Have they become better, or worse? Please elaborate.\n",
+    "<b>Question 10:</b> Obtain the Corine Land Cover results once more by using a different classification model. How do the results change. Have they become better, or worse? Please elaborate.\n",
     "</div>"
    ]
   },
