--- a/_sources/week5/tutorial2.ipynb
+++ b/_sources/week5/tutorial2.ipynb
@@ -128,8 +128,6 @@
     "id": "T28OUcKK-g3_"
    },
    "source": [
-    "As you may or may not have seen while installing, there was a warning that we need to restart our runtime. To do so, click on **Runtime** in the topbar menu and click on **Runtime opnieuw starten**/**Restart runtime**.\n",
-    "\n",
     "Now we will import these packages in the cell below:"
    ]
   },
@@ -146,10 +144,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import rasterio\n",
     "import cdsapi\n",
     "import shapely \n",
-    "import rioxarray\n",
     "import matplotlib\n",
     "import urllib3\n",
     "import pyproj\n",
@@ -162,10 +158,8 @@
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "\n",
-    "from matplotlib.colors import LinearSegmentedColormap,ListedColormap\n",
-    "from matplotlib.patches import Patch\n",
+    "from matplotlib.colors import ListedColormap\n",
     "from zipfile import ZipFile\n",
-    "from matplotlib import rcParams, cycler\n",
     "from io import BytesIO\n",
     "from urllib.request import urlopen\n",
     "from zipfile import ZipFile\n",
