--- a/_sources/week6/tutorial1.ipynb
+++ b/_sources/week6/tutorial1.ipynb
@@ -103,26 +103,7 @@
     "\n",
     "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language.\n",
     "\n",
-    "[**tweepy**](https://www.tweepy.org/) is an easy-to-use Python library for accessing the Twitter API.\n",
-    "\n",
-    "\n",
-    "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "kTEyjbOh6-9L",
-    "outputId": "201a1316-1af9-4d78-c5e6-9b638b5f7139"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install geopandas\n",
-    "!pip install matplotlib"
+    "[**tweepy**](https://www.tweepy.org/) is an easy-to-use Python library for accessing the Twitter API.\n"
    ]
   },
   {
@@ -131,8 +112,6 @@
     "id": "aQLuc04_6-9M"
    },
    "source": [
-    "As you may or may not have seen while installing, there was a warning that we need to restart our runtime. To do so, click on **Runtime** in the topbar menu and click on **Runtime opnieuw starten**/**Restart runtime**.\n",
-    "\n",
     "Now we will import these packages in the cell below:"
    ]
   },
