--- a/_sources/week5/tutorial1.ipynb
+++ b/_sources/week5/tutorial1.ipynb
@@ -835,17 +835,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "cO2YPNMU-9hQ"
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 5:</b> In the rasterization process, we use the `.make_geocube()` function. Please elaborate on the following: i)why is it important to specify the right coordinate system? What could happen if you choose the wrong coordinate system? ii) which resolution did you choose and why? iii)Why did the first result did not give us the right output with the correct colors? How did you solve this? \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "94GLYG5K47DQ"
    },
    "source": [
@@ -1045,6 +1034,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "cO2YPNMU-9hQ"
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 5:</b> In the rasterization process, we use the `.make_geocube()` function. Please elaborate on the following: i)why is it important to specify the right coordinate system? What could happen if you choose the wrong coordinate system? ii) which resolution did you choose and why? iii)Why did the first result did not give us the right output with the correct colors? How did you solve this? \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "dx5ZK8Vm47DS"
    },
    "source": [
@@ -1140,17 +1140,6 @@
     "\n",
     "# for some weird reason we get two colorbars, so we remove one:\n",
     "fig.delaxes(fig.axes[1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "SXUDXQMy_8vU"
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 6:</b> Please upload the final figure of your rasterized land-use map for your region of interest.\n",
-    "</div>"
    ]
   },
   {
@@ -1272,7 +1261,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 7:</b>  Let's have a look at the extracted building information. Please describe in your own words the information it contains. Is there specific information that suprises you to see, and do you think anything is missing that you expected? \n",
+    "<b>Question 6:</b>  Let's have a look at the extracted building information. Please describe in your own words the information it contains. Is there specific information that suprises you to see, and do you think anything is missing that you expected? \n",
     "</div>"
    ]
   },
@@ -1366,7 +1355,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 8:</b>  Please upload a figure that shows the development of building stock over the years in your region of interest. \n",
+    "<b>Question 7:</b>  Please upload a figure that shows the development of building stock over the years in your region of interest. Make sure it contains all the necessary elements (labels on the axis, title, etc.)\n",
     "</div>"
    ]
   },
@@ -1532,7 +1521,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 9:</b>  Please upload a figure of your building stock map of your region of interest. Make sure that the interpretation is clear. If necessary, merge multiple categories into one (i.e., when some categories only contain 1 or 2 buildings).\n",
+    "<b>Question 8:</b>  Please upload a figure of your building stock map of your region of interest. Make sure that the interpretation is clear. If necessary, merge multiple categories into one (i.e., when some categories only contain 1 or 2 buildings).\n",
     "</div>"
    ]
   },
@@ -1765,7 +1754,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 10:</b>  The last element of this tutorial is to play around with routing. Please explain in your own words what the .shortest_path() algorithm does. Include the term 'Dijkstra algorithm' in your answer.\n",
+    "<b>Question 9:</b>  The last element of this tutorial is to play around with routing. Please explain in your own words what the .shortest_path() algorithm does. Include the term 'Dijkstra algorithm' in your answer.\n",
     "</div>"
    ]
   },
@@ -1870,7 +1859,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 11:</b>  Please add one more routes on a map and upload the resulting figure here.\n",
+    "<b>Question 10:</b>  Please add one more routes on a map and upload the resulting figure here.\n",
     "</div>"
    ]
   },
