deploy: a985297cbbbddd0b0f4776f9d50cd5b35225d36c

--- a/_sources/week5/lecture.ipynb
+++ b/_sources/week5/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14eccbb9",
+   "id": "0b6bd1df",
    "metadata": {},
    "source": [
     "# Lecture: Big Data in the public domain\n",
@@ -36,7 +36,51 @@
     "## Licensing of data in the public domain\n",
     "The most common license for public data is the Creative Commons license. Creative Commons licenses give everyone from individual creators to large institutions a standardized way to grant the public permission to use their creative work under copyright law. From the reuser’s perspective, the presence of a Creative Commons license on a copyrighted work answers the question, “What can I do with this work?” \n",
     "\n",
-    "You can find all the information about the Creative Commons license [here](https://creativecommons.org/about/cclicenses/)."
+    "You can find all the information about the Creative Commons license [here](https://creativecommons.org/about/cclicenses/).\n",
+    "\n",
+    "## FAIR - principles\n",
+    "The FAIR principles constitute a set of guidelines for effective data management, formally introduced in a pivotal 2016 paper authored by a collaborative consortium of scientists and organizations, [published in the journal Scientific Data](https://www.nature.com/articles/sdata201618). FAIR stands for  Findability, Accessibility, Interoperability, and Reuse. These principles prioritize ensuring that data is easily discoverable, accessible, interoperable, and reusable. At its core, the FAIR framework seeks to address the challenges posed by the ever-expanding volume and complexity of data, coupled with the accelerating pace at which new data is generated. Especially when dealing with big and publicly accessible data, a clear set of rules and principles are essential to ensure the reproducability of your work.  \n",
+    "\n",
+    "The acronym FAIR encapsulates a set of principles that extend beyond mere data organization; they underscore the necessity for machine-actionability. As our dependence on computational systems continues to intensify, the FAIR principles emphasize the importance of enabling these systems to autonomously discover, access, interoperate, and reuse data with minimal human intervention. This distinctive feature ensures that the principles remain relevant in the face of evolving technological landscapes and the increasing reliance on automated processes in data management.\n",
+    "\n",
+    "`````{admonition} The FAIR-principles\n",
+    ":class: tip\n",
+    "**To be Findable**:\n",
+    "F1. (meta)data are assigned a globally unique and persistent identifier\n",
+    "\n",
+    "F2. data are described with rich metadata (defined by R1 below)\n",
+    "\n",
+    "F3. metadata clearly and explicitly include the identifier of the data it describes\n",
+    "\n",
+    "F4. (meta)data are registered or indexed in a searchable resource\n",
+    "\n",
+    "**To be Accessible**:\n",
+    "A1. (meta)data are retrievable by their identifier using a standardized communications protocol\n",
+    "\n",
+    "A1.1 the protocol is open, free, and universally implementable\n",
+    "\n",
+    "A1.2 the protocol allows for an authentication and authorization procedure, where necessary\n",
+    "\n",
+    "A2. metadata are accessible, even when the data are no longer available\n",
+    "\n",
+    "**To be Interoperable**:\n",
+    "I1. (meta)data use a formal, accessible, shared, and broadly applicable language for knowledge representation.\n",
+    "\n",
+    "I2. (meta)data use vocabularies that follow FAIR principles\n",
+    "\n",
+    "I3. (meta)data include qualified references to other (meta)data\n",
+    "\n",
+    "**To be Reusable**:\n",
+    "R1. meta(data) are richly described with a plurality of accurate and relevant attributes\n",
+    "\n",
+    "R1.1. (meta)data are released with a clear and accessible data usage license\n",
+    "\n",
+    "R1.2. (meta)data are associated with detailed provenance\n",
+    "\n",
+    "R1.3. (meta)data meet domain-relevant community standards\n",
+    "`````\n",
+    "\n",
+    "You can read more about the FAIR-principes [here](https://www.go-fair.org/fair-principles/)"
    ]
   }
  ],
