deploy: 31a7133c1f6da9798042eb49826dc274cc86f70d

--- a/_sources/week5/lecture.ipynb
+++ b/_sources/week5/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b6bd1df",
+   "id": "8c84aedf",
    "metadata": {},
    "source": [
     "# Lecture: Big Data in the public domain\n",
@@ -39,13 +39,14 @@
     "You can find all the information about the Creative Commons license [here](https://creativecommons.org/about/cclicenses/).\n",
     "\n",
     "## FAIR - principles\n",
-    "The FAIR principles constitute a set of guidelines for effective data management, formally introduced in a pivotal 2016 paper authored by a collaborative consortium of scientists and organizations, [published in the journal Scientific Data](https://www.nature.com/articles/sdata201618). FAIR stands for  Findability, Accessibility, Interoperability, and Reuse. These principles prioritize ensuring that data is easily discoverable, accessible, interoperable, and reusable. At its core, the FAIR framework seeks to address the challenges posed by the ever-expanding volume and complexity of data, coupled with the accelerating pace at which new data is generated. Especially when dealing with big and publicly accessible data, a clear set of rules and principles are essential to ensure the reproducability of your work.  \n",
+    "The FAIR principles constitute a set of guidelines for effective data management, formally introduced in a pivotal 2016 paper authored by a collaborative consortium of scientists and organizations, [published in the journal Scientific Data](https://www.nature.com/articles/sdata201618). FAIR stands for  **F**indability, **A**ccessibility, **I**nteroperability, and **R**euse. These principles prioritize ensuring that data is easily discoverable, accessible, interoperable, and reusable. At its core, the FAIR framework seeks to address the challenges posed by the ever-expanding volume and complexity of data, coupled with the accelerating pace at which new data is generated. Especially when dealing with big and publicly accessible data, a clear set of rules and principles are essential to ensure the reproducability of your work.  \n",
     "\n",
     "The acronym FAIR encapsulates a set of principles that extend beyond mere data organization; they underscore the necessity for machine-actionability. As our dependence on computational systems continues to intensify, the FAIR principles emphasize the importance of enabling these systems to autonomously discover, access, interoperate, and reuse data with minimal human intervention. This distinctive feature ensures that the principles remain relevant in the face of evolving technological landscapes and the increasing reliance on automated processes in data management.\n",
     "\n",
     "`````{admonition} The FAIR-principles\n",
     ":class: tip\n",
     "**To be Findable**:\n",
+    "\n",
     "F1. (meta)data are assigned a globally unique and persistent identifier\n",
     "\n",
     "F2. data are described with rich metadata (defined by R1 below)\n",
@@ -55,6 +56,7 @@
     "F4. (meta)data are registered or indexed in a searchable resource\n",
     "\n",
     "**To be Accessible**:\n",
+    "\n",
     "A1. (meta)data are retrievable by their identifier using a standardized communications protocol\n",
     "\n",
     "A1.1 the protocol is open, free, and universally implementable\n",
@@ -64,6 +66,7 @@
     "A2. metadata are accessible, even when the data are no longer available\n",
     "\n",
     "**To be Interoperable**:\n",
+    "\n",
     "I1. (meta)data use a formal, accessible, shared, and broadly applicable language for knowledge representation.\n",
     "\n",
     "I2. (meta)data use vocabularies that follow FAIR principles\n",
@@ -71,6 +74,7 @@
     "I3. (meta)data include qualified references to other (meta)data\n",
     "\n",
     "**To be Reusable**:\n",
+    "\n",
     "R1. meta(data) are richly described with a plurality of accurate and relevant attributes\n",
     "\n",
     "R1.1. (meta)data are released with a clear and accessible data usage license\n",
