--- a/week1/tutorial2.ipynb
+++ b/week1/tutorial2.ipynb
@@ -1228,7 +1228,7 @@
     "id": "uXPMsfN4uokG"
    },
    "source": [
-    "The shape of your 1-d arrays can actually have big implications on your mathematical oeprations!"
+    "The shape of your 1-d arrays can actually have big implications on your mathematical operations!"
    ]
   },
   {
@@ -1739,7 +1739,7 @@
     "id": "uFHN2o81uokJ"
    },
    "source": [
-    "Congratulations! You just broadcasted! Broadcasting is just Numpy eessentially doing the `np.repeat()` for you under the hood:"
+    "Broadcasting is just Numpy essentially doing the `np.repeat()` for you under the hood:"
    ]
   },
   {
@@ -1949,7 +1949,7 @@
     "id": "HB2klvliuokN"
    },
    "source": [
-    "You'll reshape arrays farily often and the `.reshape()` method is pretty intuitive:"
+    "You'll reshape arrays fairly often and the `.reshape()` method is pretty intuitive:"
    ]
   },
   {
