--- a/week1/tutorial2.ipynb
+++ b/week1/tutorial2.ipynb
@@ -1912,7 +1912,7 @@
    },
    "source": [
     "There are 3 key reshaping methods I want you to know about for reshaping numpy arrays:\n",
-    "- `.rehshape()`\n",
+    "- `.reshape()`\n",
     "- `np.newaxis`\n",
     "- `.ravel()`/`.flatten()`"
    ]
