--- a/week1/tutorial2.ipynb
+++ b/week1/tutorial2.ipynb
@@ -3114,7 +3114,7 @@
    },
    "outputs": [],
    "source": [
-    "np.linalg.norm(sides)  # you'll learn more about norms in 573"
+    "np.linalg.norm(sides)  "
    ]
   },
   {
