latest version week6

--- a/week4/tutorial1.ipynb
+++ b/week4/tutorial1.ipynb
@@ -1456,7 +1456,7 @@
     "id": "TY7oY8J30B_r"
    },
    "source": [
-    "Now let's have a look at the accuracy again of our training data"
+    "Now let's have a look at the accuracy again of our training data. **NOTE: This could really take some time to run! You may want to get a drink**"
    ]
   },
   {
